--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 MarkupSafe==3.0.2
 matchescu-base==0.17.1
+matchescu-clustering==0.2.0
 matchescu-comparison-space-generation==0.6.1
 matchescu-matching==0.7.0
 matchescu-reference-extraction==0.6.1
