--- a/requirements.txt
+++ b/requirements.txt
@@ -53,12 +53,12 @@ jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
 jupyterlab_widgets==3.0.13
 MarkupSafe==3.0.2
-matchescu-base==0.17.1
-matchescu-clustering==0.2.0
-matchescu-comparison-space-generation==0.6.1
-matchescu-matching==0.7.0
-matchescu-reference-extraction==0.6.1
-matchescu-reference-store==0.7.1
+matchescu-base @ file:../base
+matchescu-comparison-space-generation @ file:../comparison-space-generation
+matchescu-reference-extraction @ file:../reference-extraction
+matchescu-reference-store @ file:../reference-store
+matchescu-matching @ file:../matching
+matchescu-clustering @ file:../clustering
 matplotlib-inline==0.1.7
 mistune==3.1.3
 mpmath==1.3.0
@@ -104,7 +104,7 @@ sniffio==1.3.1
 soupsieve==2.6
 stack-data==0.6.3
 stopwords==1.0.1
-sympy==1.13.3
+sympy==1.13.1
 terminado==0.18.1
 threadpoolctl==3.6.0
 tinycss2==1.4.0
